--- a/GUI-test/Elements/resources/GUI.qrc
+++ b/GUI-test/Elements/resources/GUI.qrc
@@ -1,6 +1,7 @@
 <RCC>
     <qresource prefix="/scenegraph/openglunderqml">
+        <file>BottomGui.qml</file>
         <file>main.qml</file>
-        <file>SimpleButton.qml</file>
+        <file>TopGui.qml</file>
     </qresource>
 </RCC>
