Added Tooltips to the text which would later be used to explain each koefficient and their values.

--- a/GUI-test/Elements/resources/GUI.qrc
+++ b/GUI-test/Elements/resources/GUI.qrc
@@ -3,5 +3,6 @@
         <file>BottomGui.qml</file>
         <file>main.qml</file>
         <file>TopGui.qml</file>
+        <file>Tooltip.qml</file>
     </qresource>
 </RCC>
