--- a/GUI-test/Elements/resources/GUI.qrc
+++ b/GUI-test/Elements/resources/GUI.qrc
@@ -4,5 +4,8 @@
         <file>main.qml</file>
         <file>TopGui.qml</file>
         <file>Tooltip.qml</file>
+        <file>pics/fire.png</file>
+        <file>pics/smoke.png</file>
+        <file>pics/water.png</file>
     </qresource>
 </RCC>
