fixade lite fel

--- a/resources/GUI.qrc
+++ b/resources/GUI.qrc
@@ -7,6 +7,9 @@
         <file>pics/fire.png</file>
         <file>pics/smoke.png</file>
         <file>pics/water.png</file>
+		<file>pics/fire_inactive.png</file>
+        <file>pics/smoke_inactive.png</file>
+        <file>pics/water_inactive.png</file>
         <file>js/predefineValue.js</file>
     </qresource>
 </RCC>
