--- a/resources/GUI.qrc
+++ b/resources/GUI.qrc
@@ -1,8 +1,7 @@
 <RCC>
     <qresource prefix="/Elements">
         <file>GUI.qml</file>
-        <file>BottomGui.qml</file>
-        <file>TopGui.qml</file>
+        <file>Settings.qml</file>
         <file>Tooltip.qml</file>
         <file>pics/fire.png</file>
         <file>pics/smoke.png</file>
