--- a/resources/GUI.qrc
+++ b/resources/GUI.qrc
@@ -2,16 +2,10 @@
     <qresource prefix="/Elements">
         <file>GUI.qml</file>
         <file>Tooltip.qml</file>
-        <file>pics/fire2.png</file>
-        <file>pics/smoke2.png</file>
-        <file>pics/water2.png</file>
-        <file>pics/fire.png</file>
-        <file>pics/smoke.png</file>
-        <file>pics/water.png</file>
-        <file>pics/fire_inactive.png</file>
-        <file>pics/smoke_inactive.png</file>
-        <file>pics/water_inactive.png</file>
         <file>js/predefineValue.js</file>
         <file>UserSettings.qml</file>
+        <file>pics/Fire.png</file>
+        <file>pics/Smoke.png</file>
+        <file>pics/Water.png</file>
     </qresource>
 </RCC>
